<resources>
    <string name="app_name">TrainingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="sign_in_success">Вы успешно вошли в аккаунт</string>
    <string name="sign_in_failure">Вы не вошли в аккаунт</string>
    <string name="network_failure">Проблемы с интернетом</string>

    <!-- Sign Up Activity -->
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_in_text">Sign In</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="not_registered_yet">Not Registered Yet , Sign Up !</string>
    <string name="not_entered_yet">Not Entered Yet , Sign In !</string>

    <!-- Sign In Activity -->
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_data">Enter your password and e-mail</string>

    <!-- Sign Up Method -->
    <string name="sign_up_success">Вы успешно зарегистрировались</string>
    <string name="sign_up_failure">Что-то пошло не так</string>
    <string name="sign_up_weak_password">Слабый пароль</string>


    <!-- Main Activity -->
    <string name="steps_county">Количество шагов</string>
    <string name="water_county">Показатель воды</string>
    <string name="add_water_button">Добавить воды</string>
    <string name="finished_trains">Пройденные тренировки</string>
    <string name="trains_county">Список тренировок</string>
    <string name="total_county">0</string>


    <!-- Training List -->
    <string name="training_name">Тренировка</string>
    <string name="muscles_group">Группа мышц:</string>
    <string name="duration">Длительность: </string>
    <string name="train_description">Описание тренировки</string>
    <string name="complexity">Сложность: </string>
    <string name="level_easy">Легкий</string>
    <string name="level_medium">Средний</string>
    <string name="level_hard">Тяжелый</string>
    <string name="main_menu">Главное меню</string>
    <string name="training_list">Список тренировок</string>
    <string name="water_input">Добавьте количество воды (мл)</string>
    <string name="invalid_amount">Введите положительное значение</string>



    <string name="exercise_search">Найти упражнение</string>
    <string name="show_more">Показать больше</string>
    <string name="hide">Скрыть</string>
    <string name="back">Назад</string>
    <string name="training_detail_name">Название тренировки</string>
    <string name="training_not_found">Тренировка не найдена</string>
    <string name="error">Ошибка</string>
    <string name="remove_from_favorite">Удалить из избранного</string>
    <string name="add_to_favorite">Добавить в избранное</string>


</resources>