<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    android:layout_marginVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/water_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_county"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/water_intake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_county"
            android:textSize="32sp"
            android:textColor="@color/primary_color"
            android:layout_marginTop="4dp" />

        <Button
            android:id="@+id/add_water_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_water_button"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/primary_color"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>