<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/steps_county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/steps_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps_county"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/steps_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_county"
                android:textSize="32sp"
                android:textColor="@color/primary_color"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/water_county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/steps_county"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/water_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_county"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/water_intake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_county"
                android:textSize="32sp"
                android:textColor="@color/primary_color"
                android:layout_marginTop="4dp" />

            <Button
                android:id="@+id/add_water_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_water_button"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/primary_color"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/finished_trains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/water_county"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/workouts_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finished_trains"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/workouts_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_county"
                android:textSize="32sp"
                android:textColor="@color/primary_color"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/to_list_trains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/finished_trains"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/view_workouts_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trains_county"
                android:backgroundTint="@color/primary_color"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

